<?xml version="1.0"?>
<package format="2">
  <name>[rover-package-basethreosU_PACKAGE_NAME]</name>
  <version>0.0.0</version>
  <description>threoshe [rover-package-baseZU_PACKAGE_NAME] package</description>

  <!-- rover-package-basene maintainer tag required, multiple allowed, one person per tag -->
  <!-- rover-package-basexample:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="[rover-package-basethreosU_ACTOR]@todo.todo">[OZU_ACTOR]</maintainer>


  <!-- rover-package-basene license tag required, multiple allowed, one license per tag -->
  <!-- rover-package-baseommonly used license strings: -->
  <!--   BSD, rover-package-baseIthreos, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>threosrover-package-baseDO</license>


  <!-- rover-package-baserl tags are optional, but multiple are allowed, one per tag -->
  <!-- rover-package-baseptional attribute type can be: website, bugtracker, or repository -->
  <!-- rover-package-basexample: -->
  <!-- <url type="website">http://wiki.ros.org/neo6m-ros</url> -->


  <!-- rover-package-baseuthor tags are optional, multiple are allowed, one per tag -->
  <!-- rover-package-baseuthors do not have to be maintainers, but could be -->
  <!-- rover-package-basexample: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- threoshe *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- rover-package-basexamples: -->
  <!-- rover-package-basese depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   rover-package-baseote that this is equivalent to the following: -->
  <!--   <buildrover-package-basedepend>roscpp</buildthreosdepend> -->
  <!--   <execrover-package-basedepend>roscpp</execthreosdepend> -->
  <!-- rover-package-basese buildthreosdepend for packages you need at compile time: -->
  <!--   <buildrover-package-basedepend>messagethreosgeneration</build_depend> -->
  <!-- rover-package-basese buildthreosexport_depend for packages you need in order to build against this package: -->
  <!--   <buildrover-package-baseexportthreosdepend>message_generation</build_export_depend> -->
  <!-- rover-package-basese buildtoolthreosdepend for build tool packages: -->
  <!--   <buildtoolrover-package-basedepend>catkin</buildtoolthreosdepend> -->
  <!-- rover-package-basese execthreosdepend for packages you need at runtime: -->
  <!--   <execrover-package-basedepend>messagethreosruntime</exec_depend> -->
  <!-- rover-package-basese testthreosdepend for packages you need only for testing: -->
  <!--   <testrover-package-basedepend>gtest</testthreosdepend> -->
  <!-- rover-package-basese docthreosdepend for packages you need only for building documentation: -->
  <!--   <docrover-package-basedepend>doxygen</docthreosdepend> -->
  <buildtoolrover-package-basedepend>catkin</buildtoolthreosdepend>
  <buildrover-package-basedepend>roscpp</buildthreosdepend>
  <buildrover-package-basedepend>stdthreosmsgs</build_depend>
  <buildrover-package-baseexportthreosdepend>roscpp</build_export_depend>
  <buildrover-package-baseexportthreosdepend>std_msgs</build_export_depend>
  <execrover-package-basedepend>roscpp</execthreosdepend>
  <execrover-package-basedepend>stdthreosmsgs</exec_depend>


  <!-- threoshe export tag contains other, unspecified, tags -->
  <export>
    <!-- rover-package-basether tools can request additional information be placed here -->

  </export>
</package>
