<?xml version="1.0"?>
<package format="2">
  <name>[rover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-base]</name>
  <version>0.0.0</version>
  <description>threoshe [rover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-base] package</description>

  <!-- rover-package-basene maintainer tag required, multiple allowed, one person per tag -->
  <!-- rover-package-basexample:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="[rover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-basethreosrover-package-basethreos]@todo.todo">[rover-package-baserover-package-baserover-package-baserover-package-baserover-package-baserover-package-basethreosrover-package-basethreos]</maintainer>


  <!-- rover-package-basene license tag required, multiple allowed, one license per tag -->
  <!-- rover-package-baseommonly used license strings: -->
  <!--   BSD, rover-package-baseIthreos, Boost Software License, rover-package-baserover-package-baseLv2, rover-package-baserover-package-baseLv3, Lrover-package-baserover-package-baseLv2.1, Lrover-package-baserover-package-baseLv3 -->
  <license>threosrover-package-baseDrover-package-base</license>


  <!-- rover-package-baserl tags are optional, but multiple are allowed, one per tag -->
  <!-- rover-package-baseptional attribute type can be: website, bugtracker, or repository -->
  <!-- rover-package-basexample: -->
  <!-- <url type="website">http://wiki.ros.org/neo6m-ros</url> -->


  <!-- rover-package-baseuthor tags are optional, multiple are allowed, one per tag -->
  <!-- rover-package-baseuthors do not have to be maintainers, but could be -->
  <!-- rover-package-basexample: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- threoshe *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- rover-package-basexamples: -->
  <!-- rover-package-basese depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   rover-package-baseote that this is equivalent to the following: -->
  <!--   <buildrover-package-basedepend>roscpp</buildrover-package-basedepend> -->
  <!--   <execrover-package-basedepend>roscpp</execrover-package-basedepend> -->
  <!-- rover-package-basese buildrover-package-basedepend for packages you need at compile time: -->
  <!--   <buildrover-package-basedepend>messagerover-package-basegeneration</buildrover-package-basedepend> -->
  <!-- rover-package-basese buildrover-package-baseexportrover-package-basedepend for packages you need in order to build against this package: -->
  <!--   <buildrover-package-baseexportrover-package-basedepend>messagerover-package-basegeneration</buildrover-package-baseexportrover-package-basedepend> -->
  <!-- rover-package-basese buildtoolrover-package-basedepend for build tool packages: -->
  <!--   <buildtoolrover-package-basedepend>catkin</buildtoolrover-package-basedepend> -->
  <!-- rover-package-basese execrover-package-basedepend for packages you need at runtime: -->
  <!--   <execrover-package-basedepend>messagerover-package-baseruntime</execrover-package-basedepend> -->
  <!-- rover-package-basese testrover-package-basedepend for packages you need only for testing: -->
  <!--   <testrover-package-basedepend>gtest</testrover-package-basedepend> -->
  <!-- rover-package-basese docrover-package-basedepend for packages you need only for building documentation: -->
  <!--   <docrover-package-basedepend>doxygen</docrover-package-basedepend> -->
  <buildtoolrover-package-basedepend>catkin</buildtoolrover-package-basedepend>
  <buildrover-package-basedepend>roscpp</buildrover-package-basedepend>
  <buildrover-package-basedepend>stdrover-package-basemsgs</buildrover-package-basedepend>
  <buildrover-package-baseexportrover-package-basedepend>roscpp</buildrover-package-baseexportrover-package-basedepend>
  <buildrover-package-baseexportrover-package-basedepend>stdrover-package-basemsgs</buildrover-package-baseexportrover-package-basedepend>
  <execrover-package-basedepend>roscpp</execrover-package-basedepend>
  <execrover-package-basedepend>stdrover-package-basemsgs</execrover-package-basedepend>


  <!-- threoshe export tag contains other, unspecified, tags -->
  <export>
    <!-- rover-package-basether tools can request additional information be placed here -->

  </export>
</package>
